--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@google/generative-ai": "^0.24.1",
+    "@mui/material": "^7.3.2",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/mongodb": "^4.0.6",
     "daisyui": "^5.1.13",
+    "mongodb": "^6.20.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
