--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,18 +21,19 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18" # Use a specific Node.js version, like 18 or 20
+          node-version: "18"
 
       - name: Install dependencies
         run: npm ci
 
       - name: Run build
         run: npm run build
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
 
       - name: Run tests
         run: npm test
         env:
-          # Dummy environment variables for tests
-          # The values don't matter since the tests mock the API calls
-          GEMINI_API_KEY: "dummy_key"
-          MONGODB_URI: "mongodb://dummy_uri"
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
