fix: github actions build error env variables 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,7 @@ jobs:
         run: npm ci
 
       - name: Run build
-        run: npm run build
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+        run: GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} MONGODB_URI=${{ secrets.MONGODB_URI }} npm run build
 
       - name: Run tests
         run: npm test
