--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,9 @@
-# .github/workflows/ci.yml
-
-name: Node.js CI
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    env:
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
 
     steps:
       - name: Checkout repository
@@ -27,10 +18,7 @@ jobs:
         run: npm ci
 
       - name: Run build
-        run: GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} MONGODB_URI=${{ secrets.MONGODB_URI }} npm run build
+        run: npm run build
 
       - name: Run tests
         run: npm test
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
