--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.10.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@google/generative-ai": "^0.24.1",
     "@mui/material": "^7.3.2",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/mongodb": "^4.0.6",
+    "auth0": "^4.27.0",
     "daisyui": "^5.1.13",
     "mongodb": "^6.20.0",
     "next": "15.5.3",
@@ -32,6 +34,7 @@
     "@google/generative-ai": "^0.24.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@types/auth0": "^3.3.11",
     "@types/jest": "^30.0.0",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
