--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@types/mongodb": "^4.0.6",
     "daisyui": "^5.1.13",
+    "dotenv": "^17.2.2",
     "mongodb": "^6.20.0",
     "next": "15.5.3",
     "react": "19.1.0",
