--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.2",
     "mongodb": "^6.20.0",
     "next": "15.5.3",
+    "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwindcss": "^4.1.13"
