--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-# .github/workflows/ci.yml
-
 name: Node.js CI
 
 on:
@@ -25,6 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Install sharp dependencies
+        run: npm install --include=optional sharp
 
       - name: Run build
         run: npm run build
